# Master-Thesis-New

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: sdd-exceptions.md  sdd-help.md  sdd-implement.md  sdd-plan.md  sdd-resume.md  sdd-spec.md  sdd-status.md  sdd-tasks.md  sdd-verify.md
.specs/feat-base-sv-simulator/: .session.md  plan.md  spec.md  tasks.md
.specs/feat-mcmc-benchmark/: .session.md  plan.md  spec.md  tasks.md
.specs/feat-sv-leverage-simulator/: .session.md  plan.md  spec.md  tasks.md
src/estimation/: __init__.py  mcmc_config.py  mcmc_runner.py
src/simulation/: __init__.py  simulator.py  sv_params.py
tests/: test_mcmc.py  test_simulator.py  test_sv_leverage.py
