[project]
name = "master-thesis-sv"
version = "0.1.0"
description = "Neural network-based parameter estimation of stochastic volatility models"
requires-python = ">=3.11"

dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "pandas>=2.2",
    "tqdm>=4.66",
    "pymc>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
